# lDGA

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
example/: lDGA_test.ipynb
src/: fast_bubble.cpp
src/lDGA/: SDE.py  __init__.py  anderson_acc.py  bse.py  config.py  dga.toml  dmft_reader.py  eliashberg.py  epc.py  lDGA_SC.py  lDGA_SG.py  lDGA_copy.py  lDGA_main.py  lambda.py  lambda_corr.py  utilities.py
src/tests/: test_lambda_corr.py  test_sde_local.py  test_sde_q.py
