[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.9"]
build-backend = "scikit_build_core.build"

#requires = [
#    "setuptools >= 61.0",           # For pyproject.toml support
#    "setuptools-scm[toml] >= 6.2"   # Because setuptools-scm's README says so
#]
#build-backend = "setuptools.build_meta"


[project]
name = "lDGA"
version = "0.0.1"  
authors = [
  { name="Emin Moghadas", email="emin.moghadas@tuwien.ac.at" },
  { name="Samuele Giuli", email="sgiuli@sissa.it" }
]
maintainers = [
  { name="Emin Moghadas", email="emin.moghadas@tuwien.ac.at" },
  { name="Samuele Giuli", email="sgiuli@sissa.it" }
]
description = "Ladder-DGammaA implementation for Hubbard-Holstein model"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "h5py",
    "mpi4py"
]


[project.optional-dependencies]
# Optional dependencies required to run the tests or build the documentation. Can be installed by
# specifying the key in brackets: `mypackage[tests,docs]`.
tests = ["pytest", "pytest-cov"]


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Necessary for setuptools-scm to work
[tool.setuptools_scm]
