[build-system]
requires = [
    "setuptools >= 61.0",           # For pyproject.toml support
    "setuptools-scm[toml] >= 6.2"   # Because setuptools-scm's README says so
]
build-backend = "setuptools.build_meta"


[project]
name = "lDGA"
version = "0.0.1"  
authors = [
  { name="Emin Moghadas", email="emin.moghadas@tuwien.ac.at" },
  { name="Samuele Giuli", email="sgiuli@sissa.it" }
]
maintainers = [
  { name="Emin Moghadas", email="emin.moghadas@tuwien.ac.at" },
  { name="Samuele Giuli", email="sgiuli@sissa.it" }
]
description = "Ladder-DGammaA implementation for Hubbard-Holstein model"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "h5py",
    "mpi4py",
    "numba"
]


[project.optional-dependencies]
# Optional dependencies required to run the tests or build the documentation. Can be installed by
# specifying the key in brackets: `mypackage[tests,docs]`.
tests = ["pytest", "pytest-cov"]


[project.scripts]
dga = "lDGA.lDGA_SC:main"